--- a/views/index.pug
+++ b/views/index.pug
@@ -3,5 +3,11 @@ extends layout
 block content
   h1= title
   p Sai Satyanarayana Gullapalli #{title}
-  button(type="button", class="btn btn-secondary") Press Me
-  
+  button(type="button",onclick="update()" class="btn btn-info") Click Here!!
+  div(id="target") clickme
+  script.
+    var client_count=0;
+    function update() {
+      client_count++;
+      document.getElementById("target").innerHTML=`Value now ${client_count}`
+    }
